Move SceneRenderer implementation to IO module.

--- a/source/Engine/Engine.vcxproj
+++ b/source/Engine/Engine.vcxproj
@@ -140,15 +140,6 @@
     <ClCompile Include="Core\PlayerProfile\PlayerProfileManager.cpp" />
     <ClCompile Include="Core\Scene\CameraNode.cpp" />
     <ClCompile Include="Core\Scene\ICameraRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\Ogre3D\OgreCamera.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\Ogre3D\OgreSceneRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\Ogre3D\OgreSceneNodeRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftCamera.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftSceneRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftSceneNodeRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\YSE\YSECamera.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\YSE\YSESceneNodeRenderer.cpp" />
-    <ClCompile Include="Core\Scene\Implementation\YSE\YSESceneRenderer.cpp" />
     <ClCompile Include="Core\Scene\IScene.cpp" />
     <ClCompile Include="Core\Scene\ISceneNode.cpp" />
     <ClCompile Include="Core\Scene\ISceneNodeRenderer.cpp" />
@@ -192,6 +183,12 @@
     <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudio.cpp" />
     <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudioBuffer.cpp" />
     <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudioResource.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftCamera.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftSceneNodeRenderer.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftSceneRenderer.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\YSE\Scene\YSECamera.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\YSE\Scene\YSESceneNodeRenderer.cpp" />
+    <ClCompile Include="IO\Output\Audio\Implementation\YSE\Scene\YSESceneRenderer.cpp" />
     <ClCompile Include="IO\Output\Audio\Implementation\YSE\YSEAudio.cpp" />
     <ClCompile Include="IO\Output\Audio\Implementation\YSE\YSEAudioBuffer.cpp" />
     <ClCompile Include="IO\Output\Audio\Implementation\YSE\YSEAudioResource.cpp" />
@@ -210,6 +207,9 @@
     <ClCompile Include="IO\Output\Graphics\GraphicalResource.cpp" />
     <ClCompile Include="IO\Output\Graphics\Graphics.cpp" />
     <ClCompile Include="IO\Output\Graphics\Implementation\Ogre3D\OgreGraphics.cpp" />
+    <ClCompile Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreCamera.cpp" />
+    <ClCompile Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreSceneNodeRenderer.cpp" />
+    <ClCompile Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreSceneRenderer.cpp" />
     <ClCompile Include="IO\Output\IOutput.cpp" />
     <ClCompile Include="IO\Output\OutputSystemFactory.cpp" />
     <ClCompile Include="Utilities\Debug\Logger.cpp" />
@@ -336,15 +336,6 @@
     <ClInclude Include="Core\PlayerProfile\PlayerProfileManager.h" />
     <ClInclude Include="Core\Scene\CameraNode.h" />
     <ClInclude Include="Core\Scene\ICameraRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\Ogre3D\OgreCamera.h" />
-    <ClInclude Include="Core\Scene\Implementation\Ogre3D\OgreSceneRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\Ogre3D\OgreSceneNodeRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftCamera.h" />
-    <ClInclude Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftSceneRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\OpenALSoft\OpenALSoftSceneNodeRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\YSE\YSECamera.h" />
-    <ClInclude Include="Core\Scene\Implementation\YSE\YSESceneNodeRenderer.h" />
-    <ClInclude Include="Core\Scene\Implementation\YSE\YSESceneRenderer.h" />
     <ClInclude Include="Core\Scene\IScene.h" />
     <ClInclude Include="Core\Scene\ISceneNode.h" />
     <ClInclude Include="Core\Scene\ISceneNodeRenderer.h" />
@@ -390,6 +381,12 @@
     <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudio.h" />
     <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudioBuffer.h" />
     <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\OpenALSoftAudioResource.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftCamera.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftSceneNodeRenderer.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\OpenALSoft\Scene\OpenALSoftSceneRenderer.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\YSE\Scene\YSECamera.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\YSE\Scene\YSESceneNodeRenderer.h" />
+    <ClInclude Include="IO\Output\Audio\Implementation\YSE\Scene\YSESceneRenderer.h" />
     <ClInclude Include="IO\Output\Audio\Implementation\YSE\YSEAudio.h" />
     <ClInclude Include="IO\Output\Audio\Implementation\YSE\YSEAudioBuffer.h" />
     <ClInclude Include="IO\Output\Audio\Implementation\YSE\YSEAudioResource.h" />
@@ -408,6 +405,9 @@
     <ClInclude Include="IO\Output\Graphics\GraphicalResource.h" />
     <ClInclude Include="IO\Output\Graphics\Graphics.h" />
     <ClInclude Include="IO\Output\Graphics\Implementation\Ogre3D\OgreGraphics.h" />
+    <ClInclude Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreCamera.h" />
+    <ClInclude Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreSceneNodeRenderer.h" />
+    <ClInclude Include="IO\Output\Graphics\Implementation\Ogre3D\Scene\OgreSceneRenderer.h" />
     <ClInclude Include="IO\Output\IOutput.h" />
     <ClInclude Include="IO\Output\OutputSystemFactory.h" />
     <ClInclude Include="UGE.h" />
